Sync with shttps android v1.16.0 codebase